--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="./src/assets/icons/TE.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tutor Exel</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-29V3DPRHE3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-29V3DPRHE3');
+    </script>
   </head>
   <body>
     <div id="root"></div>
